hphp/test/zend/good/ext/gd/tests/gif.php.skipif
<?php 
// $Id$
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}
	if (!function_exists("imagegif") || !function_exists("imagecreatefromgif") || !function_exists('imagecreatefromjpeg')) {
		die("skip gif support unavailable");
	}
?>