hphp/test/zend/bad/ext/ldap/tests/ldap_set_rebind_proc_error.php.skipif
<?php require_once('skipif.inc'); ?>
<?php
	if (!function_exists("ldap_set_rebind_proc")) {
		die("skip ldap_set_rebind_proc() does not exist");
	}
	require "connect.inc";
	$link = fsockopen($host, $port);
	if (!$link) {
		die("skip no server listening");
	}
?>